# hastl

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  compose.yml  hastl.cabal  tailwind.config.js
.github/workflows/: haskell.yml
app/: Main.hs
assets/: index.html
docs/: JSON_LOGGING_EXAMPLE.md  REFACTORING_SUMMARY.md
docs/recipes/: using-uuids-for-db-ids.md
lib/: Api.hs  Config.hs  DevelMain.hs  Init.hs  Logger.hs  Models.hs
lib/Api/: Base.hs  Guest.hs  User.hs
lib/Api/Templates/: User.hs
lib/Api/Templates/Base/: About.hs  Footer.hs  Header.hs  Home.hs
lib/Api/Templates/Helpers/: Alpine.hs  Htmx.hs
lib/Api/Templates/User/: User.hs
src/: Config.hs  Init.hs  Logger.hs  Models.hs
src/Api/: Base.hs  Guest.hs
src/Api/Templates/Base/: Footer.hs  Header.hs  Home.hs
src/Api/Templates/Guest/: Guest.hs
src/Api/Templates/Helpers/: Htmx.hs  Icons.hs
static/: index.html
static/css/: custom.css  style.css
test-integration/: Main.hs  TestHttpSpec.hs
test-integration/test-server/: Dockerfile
test/Api/: GuestSpec.hs  UserSpec.hs
