cabal-version:      3.6
name:               hastl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             sig
maintainer:         sig@eldr.io
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Config
      , Init
      , Models
      , Api
      , Api.User
      , Logger
      , DevelMain
    -- other-modules:
    -- other-extensions:
    build-depends:    
      base
      , aeson
      , bytestring
      , containers
      , fast-logger
      , foreign-store
      , katip == 0.8.8.0 
      , lucid2
      -- , lucid2-htmx
      , microlens
      , monad-control
      , monad-logger
      , monad-metrics
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , safe
      , safe-exceptions
      , say
      , servant 
      , servant-server
      , dani-servant-lucid2
      , text
      , transformers
      , unordered-containers
      , wai
      , wai-extra
      , wai-middleware-metrics
      , warp
      , resource-pool
    hs-source-dirs:   lib
    default-language: GHC2021

executable hastl
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        hastl

    hs-source-dirs:   app
    default-language: GHC2021

test-suite hastl-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hastl
